Added hard coded HTML and skeleton for main.controller

--- a/src/index.html
+++ b/src/index.html
@@ -24,7 +24,17 @@
       <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
     <![endif]-->
 
-    <div ui-view></div>
+    
+   <div class="wrapper-div">
+        <h1>Flicker Searcher</h1>
+        <form>
+        <div >
+            <input  class="form-control" placeholder="Enter a tag to search for"/>
+            <button class="btn btn-default">Search</button>
+        </div>
+        </form>
+    </div><!--wrapper-div-->
+
 
     <!-- build:js(src) scripts/vendor.js -->
     <!-- bower:js -->
