I fixed the url on ng-src and i can see the pictures now

--- a/src/index.html
+++ b/src/index.html
@@ -36,7 +36,7 @@
             </div>
         </form>
         <div class="pictures-div" ng-repeat="picture in pictures">
-            <img ng-src="'https://farm{{picture.farm}}.staticflickr.com/{{picture.server}}{{picture.id}}_{{picture.secret}}.jpg'" />
+            <img ng-src="https://farm{{picture.farm}}.staticflickr.com/{{picture.server}}/{{picture.id}}_{{picture.secret}}.jpg" />
 
         </div>
     </div>
