--- a/src/index.html
+++ b/src/index.html
@@ -33,40 +33,41 @@
             <div ng-class="{'has-error': searchForm.searchInput.$touched && searchForm.searchInput.$invalid}">
                 <input type="text" class="form-control" placeholder="Enter a tag to search for" ng-model="searchTag" name="searchInput" required />
                 <button class="btn btn-default">Search</button>
-                <div class="help-block" ng-if="searchForm.$submitted" ng-messages="searchForm.searchInput.$error">
-                    <p class="error" ng-message="required"> Please provide a tag to search for...</p>
+                <div>
+                    <div class="help-block" ng-if="searchForm.$submitted" ng-messages="searchForm.searchInput.$error">
+                        <p class="error" ng-message="required"> Please provide a tag to search for...</p>
+                    </div>
+                    <div ng-if="searchForm.$valid && searchForm.$submitted && !pictures">
+                        <p>Searching Instangram for photos tagged with "{{searchTag}}".</p>
+                    </div>
+                    <div ng-if="pictures && searchTag">
+                        <p>We found {{pictures.length}} results for "{{searchTag}}."</p>
+                    </div>
+
                 </div>
-                <div ng-if="searchForm.$valid && searchForm.$submitted && !pictures">
-                    <p>Searching Instangram for photos tagged with "{{searchTag}}"</p>
-                </div>
-                <div ng-if="pictures && searchTag">
-                    <p>We found {{pictures.length}} results for "{{searchTag}}"</p>
-                </div>
-            </div>
         </form>
-        <div class="pictures-div" ng-repeat="picture in pictures">
+        <div class=" col-md-4 pictures-div" ng-repeat="picture in pictures">
             <img ng-src="https://farm{{picture.farm}}.staticflickr.com/{{picture.server}}/{{picture.id}}_{{picture.secret}}.jpg" />
-
         </div>
-    </div>
-    <!--wrapper-div-->
+        </div>
+        <!--wrapper-div-->
 
 
-    <!-- build:js(src) scripts/vendor.js -->
-    <!-- bower:js -->
-    <!-- run `gulp inject` to automatically populate bower script dependencies -->
-    <!-- endbower -->
-    <!-- endbuild -->
+        <!-- build:js(src) scripts/vendor.js -->
+        <!-- bower:js -->
+        <!-- run `gulp inject` to automatically populate bower script dependencies -->
+        <!-- endbower -->
+        <!-- endbuild -->
 
-    <!-- build:js({.tmp/serve,.tmp/partials,src}) scripts/app.js -->
-    <!-- inject:js -->
-    <!-- js files will be automatically insert here -->
-    <!-- endinject -->
+        <!-- build:js({.tmp/serve,.tmp/partials,src}) scripts/app.js -->
+        <!-- inject:js -->
+        <!-- js files will be automatically insert here -->
+        <!-- endinject -->
 
-    <!-- inject:partials -->
-    <!-- angular templates will be automatically converted in js and inserted here -->
-    <!-- endinject -->
-    <!-- endbuild -->
+        <!-- inject:partials -->
+        <!-- angular templates will be automatically converted in js and inserted here -->
+        <!-- endinject -->
+        <!-- endbuild -->
 
 </body>
 
