--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,7 @@
     <title>flickr</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width">
+    <link rel='stylesheet' href='//cdnjs.cloudflare.com/ajax/libs/angular-loading-bar/0.7.1/loading-bar.min.css' type='text/css' media='all' />
     <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
 
     <!-- build:css({.tmp/serve,src}) styles/vendor.css -->
@@ -37,11 +38,11 @@
                     <div class="help-block" ng-if="searchForm.$submitted" ng-messages="searchForm.searchInput.$error">
                         <p class="error" ng-message="required"> Please provide a tag to search for...</p>
                     </div>
-                    <div ng-if="searchForm.$valid && searchForm.$submitted && !pictures && !error">
-                        <p>Searching Instangram for photos tagged with "{{searchTag}}"...</p>
+                    <div ng-if="searchForm.$valid && searchForm.$submitted && !pictures">
+                        <p>Searching Flicker for photos tagged with "{{cachedSearchTag}}"...</p>
                     </div>
                     <div ng-if="pictures && searchTag">
-                        <p>We found {{pictures.length}} results for "{{searchTag}}".</p>
+                        <p>We found {{pictures.length}} results for "{{cachedSearchTag}}".</p>
                     </div>
                     <div if="error">
                         {{error}}
@@ -72,7 +73,7 @@
     <!-- angular templates will be automatically converted in js and inserted here -->
     <!-- endinject -->
     <!-- endbuild -->
-
+    <script type='text/javascript' src='//cdnjs.cloudflare.com/ajax/libs/angular-loading-bar/0.7.1/loading-bar.min.js'></script>
 </body>
 
 </html>
