--- a/src/index.html
+++ b/src/index.html
@@ -39,9 +39,9 @@
                         <p class="error" ng-message="required">Please provide a tag to search for...</p>
                     </div>
                     <div ng-if="searchForm.$valid && searchForm.$submitted && searchingMessage">
-                        <p id="search-message">Searching Flicker for photos tagged with "{{cachedSearchTag}}"...</p>
+                        <p>Searching Flicker for photos tagged with "{{cachedSearchTag}}"...</p>
                     </div>
-                    <div ng-if="pictures && searchTag && !searchingMessage">
+                    <div class="search-message" ng-if="pictures && searchTag && !searchingMessage">
                         <p>We found {{pictures.length}} results for "{{cachedSearchTag}}".</p>
                     </div>
                     <div if="error">
@@ -73,6 +73,10 @@
     <!-- angular templates will be automatically converted in js and inserted here -->
     <!-- endinject -->
     <!-- endbuild -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.4.9/angular.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.4.9/angular-messages.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.4.9/angular-animate.js
+"></script>
     <script type='text/javascript' src='//cdnjs.cloudflare.com/ajax/libs/angular-loading-bar/0.7.1/loading-bar.min.js'></script>
 </body>
 
