added js files scripts manually

--- a/src/index.html
+++ b/src/index.html
@@ -78,6 +78,8 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.4.9/angular-animate.js
 "></script>
     <script type='text/javascript' src='//cdnjs.cloudflare.com/ajax/libs/angular-loading-bar/0.7.1/loading-bar.min.js'></script>
+    <script src="index.module.js"></script>
+    <script src="main/main.controller.js"></script>
 </body>
 
 </html>
